Convert C code to C#, result are incosistent, could be due to reading as pointed out in feedback

--- a/vehicle-positions-cs-powerfleet.csproj
+++ b/vehicle-positions-cs-powerfleet.csproj
@@ -8,4 +8,14 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="Resources\VehiclePositions.dat" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="Resources\VehiclePositions.dat">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
